# speedrun

./: .gitignore  .pit.json  AGENTS.md  Cargo.toml  LICENSE  README.md  mise.toml  opencode.json  rustfmt.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
.opencode/: pit-instructions.md
.opencode/plugins/: pit.js
crates/speedrun/: Cargo.toml
crates/speedrun-core/: Cargo.toml
crates/speedrun-core/benches/: RESULTS.md  benchmarks.rs  recording_gen.rs
crates/speedrun-core/src/: index.rs  lib.rs  parser.rs  player.rs  search.rs  snapshot.rs  timemap.rs
crates/speedrun-core/src/snapshots/: speedrun_core__index__tests__snapshot_keyframe_placement.snap  speedrun_core__parser__tests__parse_minimal_v2_snapshot.snap  speedrun_core__player__tests__snapshot_screen_at_end_of_minimal_v2.snap  speedrun_core__timemap__tests__snapshot_effective_times.snap
crates/speedrun-core/tests/: common.rs  edge_cases.rs
crates/speedrun-export/: Cargo.toml
crates/speedrun-export/src/: gif.rs  lib.rs  mp4.rs  palette.rs  renderer.rs  svg.rs
crates/speedrun-export/src/snapshots/: speedrun_export__svg__tests__svg_output_snapshot.snap
crates/speedrun/src/: app.rs  controls.rs  help.rs  input.rs  main.rs  ui.rs
crates/speedrun/src/snapshots/: speedrun__controls__tests__snapshot_controls_medium_40.snap  speedrun__controls__tests__snapshot_controls_narrow_25.snap  speedrun__controls__tests__snapshot_controls_search_indicator.snap  speedrun__controls__tests__snapshot_controls_search_indicator_narrow_width.snap  speedrun__controls__tests__snapshot_controls_too_small_5.snap  speedrun__controls__tests__snapshot_controls_very_narrow_15.snap  speedrun__controls__tests__snapshot_controls_wide_80.snap  speedrun__help__tests__help_overlay_search_category.snap  speedrun__help__tests__snapshot_minimum_15x5.snap  speedrun__help__tests__snapshot_small_30x15.snap  speedrun__help__tests__snapshot_standard_60x25.snap  speedrun__ui__tests__snapshot_render_minimal_v2.snap
docs/: REQUIREMENTS.md  SPEC.md
scripts/: install-hooks.sh  pre-commit
testdata/: alternate_buffer.cast  empty.cast  input_only.cast  long_idle.cast  minimal_v2.cast  minimal_v3.cast  real_session.cast  sub_second.cast  with_markers.cast  with_resize.cast
testdata/invalid/: bad_event.cast  bad_json.cast  bad_version.cast  binary_garbage.cast  missing_fields.cast  no_header.cast  truncated.cast
