[workspace]
members = [
    "crates/speedrun-core",
    "crates/speedrun"
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Core dependencies
avt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }

# Dev dependencies
insta = "1.34"
tempfile = "3.8"
pretty_assertions = "1.4"