[package]
name = "speedrun-core"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
avt.workspace = true
rgb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "benchmarks"
harness = false