[package]
name = "speedrun-export"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
speedrun-core = { path = "../speedrun-core" }
avt.workspace = true
rgb.workspace = true
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
gif = "0.14"
color_quant = "1.1"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
