[package]
name = "speedrun"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "speedrun"
path = "src/main.rs"

[features]
default = ["export"]
export = ["dep:speedrun-export"]

[dependencies]
speedrun-core = { path = "../speedrun-core" }
speedrun-export = { path = "../speedrun-export", optional = true }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
avt.workspace = true
rgb.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true